@@ -1,3 +1,7 @@
+Mon Feb  9 21:48:59 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/ancdata.c (ancillary_inspect): show address family.
+
 Mon Feb  9 20:19:36 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/basicsocket.c (bsock_getsockname): use sockaddr_storage.
